Uploaded image for project: 'ORC'
  1. ORC
  2. ORC-1399

Fix boolean type with useTightNumericVector enabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.9.0
    • None
    • None

    Description

      With option useTightNumericVector, createRowBatch would return a ByteVectorBatch for Boolean type, however, BooleanColumnReader/Writer only accept LongVectorBatch.We should fix this bug.

      Attachments

        Issue Links

          Activity

            People

              ffacs Yuanping Wu
              ffacs Yuanping Wu
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: