ORC-1399: [C++] Fix boolean type with useTightNumericVector enabled

### What changes were proposed in this pull request?
Fix using ByteVectorBatch for BOOLEAN type with useTightNumericVector enabled.

### Why are the changes needed?
If a ByteVectorBatch is returned, BooleanColumnReader/Writer would crash because they only accept LongVectorBatch.

This closes #1449